Solved background colour on mobile

--- a/css/center.css
+++ b/css/center.css
@@ -22,18 +22,12 @@
 		-moz-box-shadow: 4px 3px 18px 0px rgba(0,0,0,0.45);
 		box-shadow: 4px 3px 18px 0px rgba(0,0,0,0.45);
     }
-    html{
+    .background{
+		background-color: gainsboro;
 		background-image: url("tower3.jpg");
         background-repeat: no-repeat;
 		background-position: right top;
         
     }
     
-}
-@media only screen and (min-width: 800px) {
-    html{
-		background-image: url("tower3.jpg");
-        background-color: gainsboro;
-        
-    }
 }
