--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@
 
 html {
     margin:0;padding:0;
-    background-image: url("tower3.jpg");
+    
     text-shadow: 1px 1px 17px rgba(0, 0, 0, 0.9);
 }
 
